Fixed css spacing issues.

--- a/Sports_Altitude_Dashboard/static/css/style.css
+++ b/Sports_Altitude_Dashboard/static/css/style.css
@@ -19,12 +19,11 @@ body {
 }
 
 #map {
-  /* position: relative; */
+  position: relative;
   height: inherit; 
   width: inherit;
-  margin: 0 auto 35px auto;
-  
 }
+
 #graph1 {
   margin-bottom: 30px;
   margin-right: -100px;
